--- a/src/components/Sales_contest.css
+++ b/src/components/Sales_contest.css
@@ -9,12 +9,11 @@
   justify-content: center;
   /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
   margin: 25px;
-
 }
 .product-form {
   width: 100%;
-  height: 864px;
-  padding: 6px 8px 6px 8px;
+  height: 100%;
+  padding: 24px 32px;
   border-radius: 28px;
   border: 1px solid #e5e5e5;
   margin: auto;
@@ -78,6 +77,7 @@
 }
 
 .product-form .product-selection {
+  margin-top: 32px;
   font-size: 28px;
   font-weight: 400;
   line-height: 24px;
@@ -87,8 +87,8 @@
 .product-form .product-selection > div {
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 10px;
+  justify-content: space-evenly;
+  gap: 24px;
 }
 
 /* .product-form button[type="button"],
@@ -145,6 +145,7 @@ button:focus {
 }
 
 .product-btn {
+  all: unset;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -152,8 +153,8 @@ button:focus {
 }
 
 .product-btn img {
-  height: 50px;
-  width: 50px;
+  height: 100px;
+  width: 100px;
   border-radius: 50%;
   object-fit: cover;
   object-position: center;
